src/lib/sandboxes/__fixtures__/python/syntax-error/submission/solution.py
def two_sum(nums: list[int], target: int) -> list[int]:
    # Missing colon, broken indentation
    seen = {}
    for i, num in enumerate(nums)
        complement = target - num
    return []
